--- a/site/index.html
+++ b/site/index.html
@@ -4,22 +4,60 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-
-    <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <title>Bootstrap Starter Page</title>
+    <title>Module 3 Assignment</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
   </head>
 <body>
+  <header>
+    <!--<nav id="header-nav" class="navbar navbar-default .navbar-static-top">-->
+    <nav id="header-nav" class="navbar navbar-default">
+      <div class="container">
+        <div class="navbar-header">
+          <div class="navbar-brand">
+	    <a href="index.html" class="pull-left">
+              <div id="brand-color">Food, LLC</div>
+	    </a>
+	  </div> <!--.navbar-brand  -->
+          
+	  <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+	</div> <!--.navbar-header-->
 
-  <h1>Hello Coursera, aqui akchete!</h1>
+        <div id="collapsable-nav" class="collapse navbar-collapse">
+          <ul id="nav-list" class="nav navbar-nav navbar-right visible-xs">
+            <li> 
+              <a href="#">Chicken</a>
+            </li>
 
+            <li >
+              <a href="#">Fish</a>
+            </li>
+
+            <li>
+              <a href="#">Beef</a>
+            </li>
+          </ul><!-- #nav-list -->
+	</div><!-- .collapse .navbar-collapse -->
+      </div> <!-- .container-->
+      <div></div>
+    </nav><!-- #header-nav-->
+  </header>
+
+  <div id="main-content" class="container">
+	  
+    <div><h1 class="text-center"> Our Menu is the Best</h1></div>
+    <div class="row">
+      <div class="menu_instance col-sm-12 col-md-12 col-xs-12"><p class="menu_title bg-transparent text-center">Chicken</p><p class="bg-transparent" >Velit sed ullamcorper morbi tincidunt ornare massa. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Amet nulla facilisi morbi tempus iaculis urna id. Sed viverra ipsum nunc aliquet. Nulla pellentesque dignissim enim sit. Egestas diam in arcu cursus euismod quis. Non enim praesent elementum facilisis. A pellentesque sit amet porttitor eget. Est ultricies integer quis auctor elit sed vulputate. Adipiscing commodo elit at imperdiet dui accumsan sit. Rhoncus mattis rhoncus urna neque. Donec ultrices tincidunt arcu non sodales neque. Turpis tincidunt id aliquet risus feugiat in ante metus dictum. Vitae auctor eu augue ut. At erat pellentesque adipiscing commodo elit at. Cursus mattis molestie a iaculis. Enim ut sem viverra aliquet eget sit amet tellus cras.</p>
+<p class="bg-transparent" >Velit sed ullamcorper morbi tincidunt   ornare massa. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Amet nulla facilisi morbi tempus iaculis urna id. Sed viverra ipsum nunc aliquet. Nulla pellentesque dign  issim enim sit. Egestas diam in arcu cursus euismod quis. Non enim praesent elementum facilisis. A pellentesque sit amet porttitor eget. Est ultricies integer quis auctor elit sed vulputat  e. Adipiscing commodo elit at imperdiet dui accumsan sit. Rhoncus mattis rhoncus urna neque. Donec ultrices tincidunt arcu non sodales neque. Turpis tincidunt id aliquet risus feugiat in a  nte metus dictum. Vitae auctor eu augue ut. At erat pellentesque adipiscing commodo elit at. Cursus mattis molestie a iaculis. Enim ut sem viverra aliquet eget sit amet tellus cras.</p>
+<p class="bg-transparent" >Velit sed ullamcorper morbi tincidunt   ornare massa. Vestibulum rhoncus est pellentesque elit ullamcorper dignissim cras. Amet nulla facilisi morbi tempus iaculis urna id. Sed viverra ipsum nunc aliquet. Nulla pellentesque dign  issim enim sit. Egestas diam in arcu cursus euismod quis. Non enim praesent elementum facilisis. A pellentesque sit amet porttitor eget. Est ultricies integer quis auctor elit sed vulputat  e. Adipiscing commodo elit at imperdiet dui accumsan sit. Rhoncus mattis rhoncus urna neque. Donec ultrices tincidunt arcu non sodales neque. Turpis tincidunt id aliquet risus feugiat in a  nte metus dictum. Vitae auctor eu augue ut. At erat pellentesque adipiscing commodo elit at. Cursus mattis molestie a iaculis. Enim ut sem viverra aliquet eget sit amet tellus cras.</p>
+      </div>
+    </div>
+  </div>
   <!-- jQuery (Bootstrap JS plugins depend on it) -->
   <script src="js/jquery-2.2.4.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
